--- a/assets/css/giphy.css
+++ b/assets/css/giphy.css
@@ -1,29 +1,69 @@
 .queryBtn {
-  border-radius: 50%;
-  margin: 1px 5px;
-  width: 80px;
-  padding: 30px 0;
+  background: transparent;
+  border: 0;
+  padding: 0;
+  cursor: pointer;
+  outline: 0;
+  -webkit-appearance: none;
+}
+
+.queryBtn {
+  top: 0;
+  background-color: white;
   text-align: center;
-  font-size: 20px;
-  border: #333 0.2px solid;
-  font-family: "Lato", sans-serif;
   text-overflow: ellipsis;
   overflow: hidden;
+  display: inline-block;
+  position: relative;
+  margin: 0 10px;
+  width: 100px;
+  height: 100px;
+  font-size: 20px;
+  font-family: "Lato", sans-serif;
+  border-radius: 50%;
+  color: #333;
+
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  transition: all 0.2s ease;
 }
 
 .queryBtn:hover {
-  box-shadow: 5px 5px 15px rgb(168, 167, 167);
-  cursor: pointer;
+  top: -10px;
+  box-shadow: 0px 10px 10px rgba(37, 37, 37, 0.884);
+  -webkit-transform: rotateX(20deg);
+  -moz-transform: rotateX(20deg);
+  -ms-transform: rotateX(20deg);
+  transform: rotateX(20deg);
+}
+
+.queryBtn:active {
+  top: 0px;
+  box-shadow: 0px 0px 0px rgba(15, 165, 60, 0);
 }
 
 #addBtn {
   padding: 10px 20px;
   font-size: 15px;
   border-radius: 5px;
+  background-color: #333;
+  color: aliceblue;
+  border: 1px rgb(41, 40, 40) solid;
 }
 
 #addBtn:hover {
   cursor: pointer;
+  top: -10px;
+  box-shadow: 0px 10px 10px rgba(37, 37, 37, 0.884);
+  -webkit-transform: rotateX(20deg);
+  -moz-transform: rotateX(20deg);
+  -ms-transform: rotateX(20deg);
+  transform: rotateX(20deg);
+}
+
+#addBtn:active {
+  box-shadow: 0px 0px 0px rgba(15, 165, 60, 0);
 }
 
 #btnTextInput {
